WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2004-01-24


Version 0.0.5 (under dev!):
   * /set command to modify config options when WeeChat is running
   * secured code to prevent buffer overflows and memory leaks
   * fixed QUIT IRC command: now sent to all connected servers (not only current)
   * new Perl script function to display message in info bar ("IRC::print_infobar")
   * info bar highlight notifications
   * info bar timestamp is added to config ("look_infobar_timestamp")
   * added info bar (optional, "look_infobar" to enable it, "on" by default)
   * fixed crash with /oper command
   * for default config file, nick is now based on un*x username (thanks to Witukind)
   * fixed crash when config file cannot be written
   * -c (or --config) command line parameter added to see config file options
   * highlight action messages

Version 0.0.4 (2004-01-01):
   * Perl plugin, with auto-load
   * when private window is created (another user is talking), WeeChat does not
     switch to this window
   * highlight when our nick is written in a channel/private window
   * ctrl-C now intercepted (ignored)
   * debug messages can be enabled via ./configure --enbale-debug option

Version 0.0.3 (2003-11-03):
   * ./configure script to build WeeChat
   * nicks are now correctly sorted (op, halfop, voice, other)
   * fixed problem with '353' IRC message (nicklist)
   * fixed problem when nick is truncated by server
   * fixed crash when entering text without any server connection
   * fixed crash when /set command is executed
   * fixed display bug (text was blinking when scrolling)
   * french translation
   * new IRC command: /stats, /service, /squit, /motd, /lusers, /links, /time,
     /trace, /admin, /info, /servlist, /squery, /who, /whowas, /die, /summon,
     /users, /wallops, /userhost, /ison, /ctcp ping
   * code cleanup

Version 0.0.2 (2003-10-05):
   * added commands /rehash and /restart