@@ -6,8 +6,10 @@ ChangeLog - 2004-01-24
 
 Version 0.0.5 (under dev!):
    * /set command to modify config options when WeeChat is running
+   * fixed look_nicklist config option, now enables/disables nicklist
    * secured code to prevent buffer overflows and memory leaks
    * fixed QUIT IRC command: now sent to all connected servers (not only current)
+   * URL command line parameter to connect to server(s)
    * new Perl script function to display message in info bar ("IRC::print_infobar")
    * info bar highlight notifications
    * info bar timestamp is added to config ("look_infobar_timestamp")
